force-app/main/default/objects/Notification__e/Notification__e.object-meta.xml
<CustomObject>
    <label>Notification</label>
    <pluralLabel>Notifications</pluralLabel>
</CustomObject>