force-app/main/default/objects/Notification__e/fields/IntentCategory__c.field-meta.xml
<CustomField>
    <fullName>IntentCategory__c</fullName>
    <description>Set by Einstein Intent</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>