force-app/main/default/objects/Notification__e/fields/IntentRawResultJSON__c.field-meta.xml
<CustomField>
    <fullName>IntentRawResultJSON__c</fullName>
    <label>IntentRawResultJSON</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>