force-app/main/default/objects/Notification__e/fields/MessageTone__c.field-meta.xml
<CustomField>
    <fullName>MessageTone__c</fullName>
    <description>Set by Einstein Sentiment</description>
    <label>MessageTone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>