force-app/main/default/objects/Notification__e/fields/Notifier__c.field-meta.xml
<CustomField>
    <fullName>Notifier__c</fullName>
    <label>Notifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>