force-app/main/default/objects/Notification__e/fields/OriginalReplayId__c.field-meta.xml
<CustomField>
    <fullName>OriginalReplayId__c</fullName>
    <label>OriginalReplayId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>