force-app/main/default/objects/Notification__e/fields/SenderId__c.field-meta.xml
<CustomField>
    <fullName>SenderId__c</fullName>
    <label>SenderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>