force-app/main/default/objects/Notification__e/fields/SentimentRawResultJSON__c.field-meta.xml
<CustomField>
    <fullName>SentimentRawResultJSON__c</fullName>
    <label>SentimentRawResultJSON</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>